# django-password-expiration

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg
password_expiration/: apps.py  backends.py  conf.py  middleware.py  models.py  tests.py  utils.py
password_expiration/management/commands/: send-password-expiration-emails.py
password_expiration/migrations/: 0001_initial.py  0002_auto_20220623_0855.py
test_project/test_project/: settings.py
