[metadata]
name = django-password-expiration
version = 0.1
description = A Django app to set password expiration policy for your project.
long_description = file: README.md
url = https://github.com/windschatten-it/django-password-expiration
author = Fabian Ullmann
author_email = fabian@windschatten.it
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.2
    django-easysettings==2.0.1